package com.projekt;

public class Bilet {
    private double cena;
    private int nrMiejsca;

    public Bilet(double cena, int nrMiejsca) { this.cena = cena; this.nrMiejsca = nrMiejsca; }
}
