@startuml

title __PROJEKT's Class Diagram__\n

  namespace com.projekt {
    class com.projekt.Bilet {
        - cena : double
        - nrMiejsca : int
        + Bilet()
    }
  }
  

  namespace com.projekt {
    class com.projekt.Klient {
        # type : String
        - id : int
        - klasa : String
        - rezerwacje : List<Rezerwacja>
        + Klient()
        + addRezerwacja()
        + getId()
        + getRezerwacje()
        + setId()
        + setKlasa()
        + toString()
    }
  }
  

  namespace com.projekt {
    class com.projekt.Korpo {
        + Korpo()
    }
  }
  

  namespace com.projekt {
    class com.projekt.Lot {
        # type : String
        - gPodroz : float
        - klienci : List<Klient>
        + Lot()
        + addKlient()
        + getKlienci()
        + getSamolot()
        + getTrasa()
        + getgPodroz()
        + setSamolot()
        + setTrasa()
        + toString()
    }
  }
  

  namespace com.projekt {
    class com.projekt.LotCodzienny {
        + LotCodzienny()
    }
  }
  

  namespace com.projekt {
    class com.projekt.LotCotygodniowy {
        + LotCotygodniowy()
    }
  }
  

  namespace com.projekt {
    class com.projekt.Lotnisko {
        - kraj : String
        - miasto : String
        + Lotnisko()
        + getKraj()
        + getMiasto()
        + toString()
    }
  }
  

  namespace com.projekt {
    class com.projekt.Main {
        {static} + liczbaOpcji : int
        {static} + drawMenu()
        {static} + idCheck()
        {static} + main()
    }
  }
  

  namespace com.projekt {
    class com.projekt.Osoba {
        - imie : String
        - nazwisko : String
        + Osoba()
        + toString()
    }
  }
  

  namespace com.projekt {
    class com.projekt.OsobaVip {
        + OsobaVip()
    }
  }
  

  namespace com.projekt {
    class com.projekt.Posrednik {
        - nazwa : String
        + Posrednik()
        + toString()
    }
  }
  

  namespace com.projekt {
    class com.projekt.Rezerwacja {
        + Rezerwacja()
        + getBilet()
        + getLot()
        + setBilet()
        + setLot()
    }
  }
  

  namespace com.projekt {
    class com.projekt.Samolot {
        + type : String
        # miejscaBiznesowa : int
        # miejscaEkonomiczna : int
        # miejscaPierwszaKl : int
        # mnoznikBiznesowa : double
        # mnoznikEkonomiczna : double
        # mnoznikPierwszaKl : int
        # zasieg : int
        - id : String
        - model : String
        + Samolot()
        + getId()
        + getMiejscaBiznesowa()
        + getMiejscaEkonomiczna()
        + getMiejscaPierwszaKl()
        + getMnoznikBiznesowa()
        + getMnoznikEkonomiczna()
        + getMnoznikPierwszaKl()
        + getModel()
        + getZasieg()
        + toString()
        + zarezerwujMiejsceBiznesowa()
        + zarezerwujMiejsceEkonomiczna()
        + zarezerwujMiejscePierwszaKl()
        + zwolnijMiejsceBiznesowa()
        + zwolnijMiejsceEkonomiczna()
        + zwolnijMiejscePierwszaKl()
    }
  }
  

  namespace com.projekt {
    class com.projekt.Trasa {
        - dlugosc : float
        + Trasa()
        + getBaza()
        + getCel()
        + getDlugosc()
        + toString()
        - setDlugosc()
    }
  }
  

  namespace com.projekt {
    class com.projekt.TypA {
        + TypA()
        + getMiejscaBiznesowa()
        + getMiejscaEkonomiczna()
        + getMiejscaPierwszaKl()
        + zarezerwujMiejsceBiznesowa()
        + zarezerwujMiejsceEkonomiczna()
        + zarezerwujMiejscePierwszaKl()
        + zwolnijMiejsceBiznesowa()
        + zwolnijMiejsceEkonomiczna()
        + zwolnijMiejscePierwszaKl()
    }
  }
  

  namespace com.projekt {
    class com.projekt.TypB {
        + TypB()
        + getMiejscaBiznesowa()
        + getMiejscaEkonomiczna()
        + getMiejscaPierwszaKl()
        + zarezerwujMiejsceBiznesowa()
        + zarezerwujMiejsceEkonomiczna()
        + zarezerwujMiejscePierwszaKl()
        + zwolnijMiejsceBiznesowa()
        + zwolnijMiejsceEkonomiczna()
        + zwolnijMiejscePierwszaKl()
    }
  }
  

  namespace com.projekt {
    class com.projekt.TypC {
        + TypC()
        + getMiejscaBiznesowa()
        + getMiejscaEkonomiczna()
        + getMiejscaPierwszaKl()
        + zarezerwujMiejsceBiznesowa()
        + zarezerwujMiejsceEkonomiczna()
        + zarezerwujMiejscePierwszaKl()
        + zwolnijMiejsceBiznesowa()
        + zwolnijMiejsceEkonomiczna()
        + zwolnijMiejscePierwszaKl()
    }
  }
  

  namespace com.projekt {
    class com.projekt.TypD {
        + TypD()
        + getMiejscaBiznesowa()
        + getMiejscaEkonomiczna()
        + getMiejscaPierwszaKl()
        + zarezerwujMiejsceBiznesowa()
        + zarezerwujMiejsceEkonomiczna()
        + zarezerwujMiejscePierwszaKl()
        + zwolnijMiejsceBiznesowa()
        + zwolnijMiejsceEkonomiczna()
        + zwolnijMiejscePierwszaKl()
    }
  }
  

  com.projekt.Korpo -up-|> com.projekt.Posrednik
  com.projekt.Lot o-- com.projekt.Samolot : samolot
  com.projekt.Lot o-- com.projekt.Trasa : trasa
  com.projekt.LotCodzienny -up-|> com.projekt.Lot
  com.projekt.LotCotygodniowy -up-|> com.projekt.Lot
  com.projekt.Osoba -up-|> com.projekt.Klient
  com.projekt.OsobaVip -up-|> com.projekt.Osoba
  com.projekt.Posrednik -up-|> com.projekt.Klient
  com.projekt.Rezerwacja o-- com.projekt.Bilet : bilet
  com.projekt.Rezerwacja o-- com.projekt.Lot : lot
  com.projekt.Trasa o-- com.projekt.Lotnisko : baza
  com.projekt.Trasa o-- com.projekt.Lotnisko : cel
  com.projekt.TypA -up-|> com.projekt.Samolot
  com.projekt.TypB -up-|> com.projekt.Samolot
  com.projekt.TypC -up-|> com.projekt.Samolot
  com.projekt.TypD -up-|> com.projekt.Samolot


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
